--- a/roster.html
+++ b/roster.html
@@ -702,7 +702,7 @@
             </table>
           </div>
         </div> -->
-        <div
+        <!-- <div
           class="card__container"
           data-lastname="kinter"
           data-year="6"
@@ -728,7 +728,7 @@
               </tr>
             </table>
           </div>
-        </div>
+        </div> -->
         <div
           class="card__container"
           data-lastname="sippel"
@@ -894,7 +894,7 @@
             </table>
           </div>
         </div>
-        <div
+        <!--  <div
           class="card__container"
           data-lastname="belkhelladi"
           data-year="6"
@@ -920,7 +920,7 @@
               </tr>
             </table>
           </div>
-        </div>
+        </div> -->
         <div
           class="card__container"
           data-lastname="zebo"
@@ -977,7 +977,7 @@
             </table>
           </div>
         </div>
-        <div
+        <!-- <div
           class="card__container"
           data-lastname="adamski"
           data-year="6"
@@ -1003,7 +1003,7 @@
               </tr>
             </table>
           </div>
-        </div>
+        </div> -->
       </div>
     </main>
     <!--Footer-->
