--- a/index.html
+++ b/index.html
@@ -137,6 +137,29 @@
         <h2>Club Manager</h2>
       </div>
     </div> -->
+    <!---Schedule-->
+    <!-- <div class="schedule__container">
+      <div class="schedule__card">
+        <img src="images/Cooper.jpeg" height="300" width="300" />
+        <h1>9/3</h1>
+        <h2>Practice 1</h2>
+      </div>
+      <div class="schedule__card">
+        <h1>9/5</h1>
+        <h2>Practice 2</h2>
+        <img src="images/Cooper.jpeg" height="300" width="300" />
+      </div>
+      <div class="schedule__card">
+        <img src="images/Cooper.jpeg" height="300" width="300" />
+        <h1>9/6</h1>
+        <h2>Film Session</h2>
+      </div>
+      <div class="schedule__card">
+        <h1>9/7</h1>
+        <h2>GURFC @ UVA</h2>
+        <img src="images/Cooper.jpeg" height="300" width="300" />
+      </div>
+    </div> -->
     <!--Instagram-->
     <h1
       style="
