--- a/roster.html
+++ b/roster.html
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <div class="next-match">
@@ -93,7 +97,7 @@
       </div>
       <div id="player__list" class="roster__container">
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="brady"
           data-year="4"
           data-pos="10.1"
@@ -121,7 +125,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="aird"
           data-year="4"
           data-pos="8.1"
@@ -149,7 +153,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="jensen"
           data-year="5"
           data-pos="11.1"
@@ -178,7 +182,7 @@
         </div>
 
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="lonergan"
           data-year="4"
           data-pos="6.1"
@@ -206,7 +210,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="duncan"
           data-year="4"
           data-pos="11.2"
@@ -234,7 +238,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="mancini"
           data-year="2"
           data-pos="15.1"
@@ -262,7 +266,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="lee"
           data-year="3"
           data-pos="4.1"
@@ -290,7 +294,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="miller"
           data-year="3"
           data-pos="15.2"
@@ -318,7 +322,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="greenspan"
           data-year="5"
           data-pos="2.1"
@@ -348,7 +352,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="maloney"
           data-year="3"
           data-pos="12.1"
@@ -376,7 +380,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="saxon"
           data-year="2"
           data-pos="9.1"
@@ -404,7 +408,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="egan"
           data-year="2"
           data-pos="6.1"
@@ -432,7 +436,7 @@
         </div>
 
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="dotson"
           data-year="3"
           data-pos="5.2"
@@ -459,7 +463,7 @@
           </div>
         </div>
         <!-- <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="sloniewsky"
           data-year="2"
           data-pos="1.3"
@@ -486,7 +490,7 @@
           </div>
         </div> -->
         <!-- <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="chennupati"
           data-year="4"
           data-pos="12.2"
@@ -513,7 +517,7 @@
           </div>
         </div> -->
         <!--  <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="norasteh"
           data-year="2"
           data-pos="6.3"
@@ -540,7 +544,7 @@
           </div>
         </div> -->
         <!-- <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="mazzariello"
           data-year="3"
           data-pos="1.3"
@@ -568,7 +572,7 @@
         </div> -->
 
         <!-- <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="forgeas"
           data-year="5"
           data-pos="7.3"
@@ -595,7 +599,7 @@
           </div>
         </div> -->
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="ottariano"
           data-year="3"
           data-pos="1.2"
@@ -622,7 +626,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="barsantini"
           data-year="3"
           data-pos="15.1"
@@ -649,7 +653,7 @@
           </div>
         </div>
         <!-- <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="daly"
           data-year="2"
           data-pos="11.2"
@@ -676,7 +680,7 @@
           </div>
         </div> -->
         <!-- <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="nasser"
           data-year="6"
           data-pos="7.1"
@@ -703,7 +707,7 @@
           </div>
         </div> -->
         <!-- <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="kinter"
           data-year="6"
           data-pos="4.1"
@@ -730,7 +734,7 @@
           </div>
         </div> -->
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="sippel"
           data-year="2"
           data-pos="10.2"
@@ -757,7 +761,7 @@
           </div>
         </div>
         <!-- <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="accardo"
           data-year="3"
           data-pos="12.3"
@@ -784,7 +788,7 @@
           </div>
         </div> -->
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="chorabik"
           data-year="5"
           data-pos="1.1"
@@ -812,7 +816,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="mcmahon"
           data-year="5"
           data-pos="1.1"
@@ -839,7 +843,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="martin"
           data-year="5"
           data-pos="10.2"
@@ -867,7 +871,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="altobelli"
           data-year="4"
           data-pos="11.1"
@@ -895,7 +899,7 @@
           </div>
         </div>
         <!--  <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="belkhelladi"
           data-year="6"
           data-pos="6.1"
@@ -922,7 +926,7 @@
           </div>
         </div> -->
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="zebo"
           data-year="4"
           data-pos="13.1"
@@ -950,7 +954,7 @@
           </div>
         </div>
         <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="calderon"
           data-year="5"
           data-pos="2.2"
@@ -978,7 +982,7 @@
           </div>
         </div>
         <!-- <div
-          class="card__container"
+          class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="adamski"
           data-year="6"
           data-pos="11.2"
