--- a/about.html
+++ b/about.html
@@ -57,16 +57,16 @@
               <a href="shop.html" class="navbar__links">Shop</a>
             </li>
             <li class="navbar__item">
-              <a href="us.html" class="navbar__links">About</a>
+              <a href="about.html" class="navbar__links">About</a>
             </li>
             <li class="navbar__item">
               <a href="roster.html" class="navbar__links">Roster</a>
             </li>
             <li class="navbar__item">
-              <a href="match.html" class="navbar__links">Watch</a>
+              <a href="watch.html" class="navbar__links">Watch</a>
             </li>
             <li class="navbar__btn">
-              <a href="watch.html" class="button">Join GURFC</a>
+              <a href="join.html" class="button">Join GURFC</a>
             </li>
           </ul>
         </div>
