--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
           </a>
           <ul class="navbar__menu">
             <li class="navbar__item">
-              <a href="./shop" class="navbar__links">Shop</a>
+              <a href="shop.html" class="navbar__links">Shop</a>
             </li>
             <li class="navbar__item">
-              <a href="./about" class="navbar__links">About</a>
+              <a href="about.html" class="navbar__links">About</a>
             </li>
             <li class="navbar__item">
-              <a href="./roster" class="navbar__links">Roster</a>
+              <a href="roster.html" class="navbar__links">Roster</a>
             </li>
             <li class="navbar__item">
-              <a href="./watch" class="navbar__links">Watch</a>
+              <a href="watch.html" class="navbar__links">Watch</a>
             </li>
             <li class="navbar__btn">
-              <a href="./join" class="button">Join GURFC</a>
+              <a href="join.html" class="button">Join GURFC</a>
             </li>
           </ul>
         </div>
@@ -91,7 +91,7 @@
           <h1>Georgetown University Rugby Football Club</h1>
           <h2>Est. 1967</h2>
         </div>
-        <button class="main__btn"><a href="./join">Join Now</a></button>
+        <button class="main__btn"><a href="join.html">Join Now</a></button>
       </div>
     </div>
     <!--Coaching-->
@@ -502,20 +502,20 @@
     <section>
       <div class="footer__container">
         <div class="footer__logo">
-          <a href="./" id="footer__img">
+          <a href="index.html" id="footer__img">
             <img src="images/logo.png" width="100" height="100" />
           </a>
           <p>©2024 All rights reserved</p>
         </div>
         <div class="footer__links">
           <div class="footer__column">
-            <a href="./shop">Shop</a>
-            <a href="./about">About</a>
-            <a href="./roster">Roster</a>
-            <a href="./watch">Watch</a>
+            <a href="shop.html">Shop</a>
+            <a href="about.html">About</a>
+            <a href="roster.html">Roster</a>
+            <a href="watch.html">Watch</a>
           </div>
           <div class="footer__column">
-            <a href="./join">Join GURFC</a>
+            <a href="watch.html">Join GURFC</a>
             <a href="https://thehoya.com/?s=rugby">Blog</a>
             <a href="https://linktr.ee/gurfc">More Links</a>
           </div>
