--- a/join.html
+++ b/join.html
@@ -54,19 +54,19 @@
           </a>
           <ul class="navbar__menu">
             <li class="navbar__item">
-              <a href="./shop" class="navbar__links">Shop</a>
+              <a href="shop.html" class="navbar__links">Shop</a>
             </li>
             <li class="navbar__item">
-              <a href="./about" class="navbar__links">About</a>
+              <a href="about.html" class="navbar__links">About</a>
             </li>
             <li class="navbar__item">
-              <a href="./roster" class="navbar__links">Roster</a>
+              <a href="roster.html" class="navbar__links">Roster</a>
             </li>
             <li class="navbar__item">
-              <a href="./watch" class="navbar__links">Watch</a>
+              <a href="watch.html" class="navbar__links">Watch</a>
             </li>
             <li class="navbar__btn">
-              <a href="./join" class="button">Join GURFC</a>
+              <a href="join.html" class="button">Join GURFC</a>
             </li>
           </ul>
         </div>
