--- a/watch.html
+++ b/watch.html
@@ -35,13 +35,13 @@
           "
         >
           <h4 style="color: #041e42; text-align: center; padding-top: 4px">
-            Next Match - Preseason
+            Next Match - Away
           </h4>
-          <p>Sept 7 2024</p>
+          <p>Sept 14 2024</p>
         </div>
         <div></div>
         <div class="opponent-card">
-          <img src="images/uva-logo.png" id="opp-logo" />
+          <img src="images/bloomsburg-logo.png" id="opp-logo" />
         </div>
       </div>
     </div>
