--- a/about.html
+++ b/about.html
@@ -197,12 +197,12 @@
         <div class="footer__links">
           <div class="footer__column">
             <a href="shop.html">Shop</a>
-            <a href="us.html">About</a>
+            <a href="about.html">About</a>
             <a href="roster.html">Roster</a>
-            <a href="match.html">Watch</a>
+            <a href="watch.html">Watch</a>
           </div>
           <div class="footer__column">
-            <a href="watch.html">Join GURFC</a>
+            <a href="join.html">Join GURFC</a>
             <a href="https://thehoya.com/?s=rugby">Blog</a>
             <a href="https://linktr.ee/gurfc">More Links</a>
           </div>
