--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
             <a href="watch.html">Watch</a>
           </div>
           <div class="footer__column">
-            <a href="watch.html">Join GURFC</a>
+            <a href="join.html">Join GURFC</a>
             <a href="https://thehoya.com/?s=rugby">Blog</a>
             <a href="https://linktr.ee/gurfc">More Links</a>
           </div>
