--- a/shop.html
+++ b/shop.html
@@ -58,13 +58,13 @@
               <a href="shop.html" class="navbar__links">Shop</a>
             </li>
             <li class="navbar__item">
-              <a href="us.html" class="navbar__links">About</a>
+              <a href="about.html" class="navbar__links">About</a>
             </li>
             <li class="navbar__item">
               <a href="roster.html" class="navbar__links">Roster</a>
             </li>
             <li class="navbar__item">
-              <a href="match.html" class="navbar__links">Watch</a>
+              <a href="watch.html" class="navbar__links">Watch</a>
             </li>
             <li class="navbar__btn">
               <a href="join.html" class="button">Join GURFC</a>
@@ -177,12 +177,12 @@
         <div class="footer__links">
           <div class="footer__column">
             <a href="shop.html">Shop</a>
-            <a href="us.html">About</a>
+            <a href="about.html">About</a>
             <a href="roster.html">Roster</a>
-            <a href="match.html">Watch</a>
+            <a href="watch.html">Watch</a>
           </div>
           <div class="footer__column">
-            <a href="watch.html">Join GURFC</a>
+            <a href="join.html">Join GURFC</a>
             <a href="https://thehoya.com/?s=rugby">Blog</a>
             <a href="https://linktr.ee/gurfc">More Links</a>
           </div>
