--- a/join.html
+++ b/join.html
@@ -37,11 +37,11 @@
           <h4 style="color: #041e42; text-align: center; padding-top: 4px">
             Next Match - Away
           </h4>
-          <p>Sept 14 2024</p>
+          <p>Sept 21 2024</p>
         </div>
         <div></div>
         <div class="opponent-card">
-          <img src="images/bloomsburg-logo.png" id="opp-logo" />
+          <img src="images/towson_logo.png" id="opp-logo" />
         </div>
       </div>
     </div>
