--- a/roster.html
+++ b/roster.html
@@ -40,13 +40,13 @@
           "
         >
           <h4 style="color: #041e42; text-align: center; padding-top: 4px">
-            Next Match - Away
+            Next Match - Home
           </h4>
-          <p>Sept 21 2024</p>
+          <p>Oct 5 2024</p>
         </div>
         <div></div>
         <div class="opponent-card">
-          <img src="images/towson_logo.png" id="opp-logo" />
+          <img src="images/salisbury_logo.png" id="opp-logo" />
         </div>
       </div>
     </div>
