drexel next match

--- a/roster.html
+++ b/roster.html
@@ -42,11 +42,11 @@
           <h4 style="color: #041e42; text-align: center; padding-top: 4px">
             Next Match - Home
           </h4>
-          <p>Oct 19 2024</p>
+          <p>Oct 26 2024</p>
         </div>
         <div></div>
         <div class="opponent-card">
-          <img src="images/umbc_logo.png" id="opp-logo" />
+          <img src="images/drexel_logo.png" id="opp-logo" />
         </div>
       </div>
     </div>
