--- a/coach.html
+++ b/coach.html
@@ -33,7 +33,7 @@
           "
         >
           <h4 style="color: #041e42; text-align: center; padding-top: 4px">
-            Next Match - Home
+            Next Match - Cancelled
           </h4>
           <p>Oct 26 2024</p>
         </div>
