playoff next_game

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
           "
         >
           <h4 style="color: #041e42; text-align: center; padding-top: 4px">
-            Next Match - Cancelled
+            Next Match - MARC Semifinals
           </h4>
-          <p>Oct 26 2024</p>
+          <p>Nov 2 2024</p>
         </div>
         <div></div>
         <div class="opponent-card">
-          <img src="images/drexel_logo.png" id="opp-logo" />
+          <img src="images/nova_logo.svg" id="opp-logo" />
         </div>
       </div>
     </div>
