--- a/roster.html
+++ b/roster.html
@@ -40,13 +40,13 @@
           "
         >
           <h4 style="color: #041e42; text-align: center; padding-top: 4px">
-            Next Match - Cancelled
+            Next Match - MARC Semifinals
           </h4>
-          <p>Oct 26 2024</p>
+          <p>Nov 2 2024</p>
         </div>
         <div></div>
         <div class="opponent-card">
-          <img src="images/drexel_logo.png" id="opp-logo" />
+          <img src="images/nova_logo.svg" id="opp-logo" />
         </div>
       </div>
     </div>
@@ -154,7 +154,7 @@
             </table>
           </div>
         </div>
-        <div
+        <!-- <div
           class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="jensen"
           data-year="5"
@@ -181,7 +181,7 @@
               </tr>
             </table>
           </div>
-        </div>
+        </div> -->
 
         <div
           class="card__container animate__animated animate__slideInUp animate__faster"
@@ -323,7 +323,7 @@
             </table>
           </div>
         </div>
-        <div
+        <!-- <div
           class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="greenspan"
           data-year="5"
@@ -352,7 +352,7 @@
               </tr>
             </table>
           </div>
-        </div>
+        </div> -->
         <div
           class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="maloney"
@@ -376,7 +376,7 @@
               <tr>
                 <td class="player_position">Inside-Center, Fly-Half</td>
                 <td class="player_year">2026</td>
-                <td class="player_hometown">Somewhere, NY</td>
+                <td class="player_hometown">Larchmont, NY</td>
               </tr>
             </table>
           </div>
@@ -649,7 +649,7 @@
               <tr>
                 <td class="player_position">Fullback</td>
                 <td class="player_year">2026</td>
-                <td class="player_hometown">Montevideo, Uruguay</td>
+                <td class="player_hometown">Bethesda, MD</td>
               </tr>
             </table>
           </div>
@@ -789,7 +789,7 @@
             </table>
           </div>
         </div> -->
-        <div
+        <!-- <div
           class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="chorabik"
           data-year="5"
@@ -816,8 +816,8 @@
               </tr>
             </table>
           </div>
-        </div>
-        <div
+        </div> -->
+        <!-- <div
           class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="mcmahon"
           data-year="5"
@@ -843,8 +843,8 @@
               </tr>
             </table>
           </div>
-        </div>
-        <div
+        </div> -->
+        <!-- <div
           class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="martin"
           data-year="5"
@@ -871,7 +871,7 @@
               </tr>
             </table>
           </div>
-        </div>
+        </div> -->
         <div
           class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="altobelli"
@@ -895,7 +895,7 @@
               <tr>
                 <td class="player_position">Winger</td>
                 <td class="player_year">2025</td>
-                <td class="player_hometown">Somewhere, NJ</td>
+                <td class="player_hometown">Bridgewater, NJ</td>
               </tr>
             </table>
           </div>
@@ -950,12 +950,12 @@
               <tr>
                 <td class="player_position">Outside Center</td>
                 <td class="player_year">2025</td>
-                <td class="player_hometown">Somewhere, NJ</td>
+                <td class="player_hometown">Verona, NJ</td>
               </tr>
             </table>
           </div>
         </div>
-        <div
+        <!-- <div
           class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="calderon"
           data-year="5"
@@ -982,7 +982,7 @@
               </tr>
             </table>
           </div>
-        </div>
+        </div> -->
         <!-- <div
           class="card__container animate__animated animate__slideInUp animate__faster"
           data-lastname="adamski"
