Address for game included

--- a/coach.html
+++ b/coach.html
@@ -28,7 +28,7 @@
           style="
             display: block;
             text-align: center;
-            line-height: 175%;
+            line-height: 115%;
             padding-top: 0;
           "
         >
@@ -36,6 +36,7 @@
             Next Match - MARC Semifinals
           </h4>
           <p>Nov 2 2024</p>
+          <p>865 Centerville Rd, Lancaster, PA 17691</p>
         </div>
         <div></div>
         <div class="opponent-card">
