--- a/roster.html
+++ b/roster.html
@@ -150,7 +150,7 @@
               <tr>
                 <td class="player_position">Number 8</td>
                 <td class="player_year">2025</td>
-                <td class="player_hometown">London, England</td>
+                <td class="player_hometown">London, UK</td>
               </tr>
             </table>
           </div>
@@ -233,7 +233,7 @@
                 <th class="hometown">Hometown:</th>
               </tr>
               <tr>
-                <td class="player_position">Winger</td>
+                <td class="player_position">Wing</td>
                 <td class="player_year">2025</td>
                 <td class="player_hometown">Pasadena, CA</td>
               </tr>
@@ -894,7 +894,7 @@
                 <th class="hometown">Hometown:</th>
               </tr>
               <tr>
-                <td class="player_position">Winger</td>
+                <td class="player_position">Wing</td>
                 <td class="player_year">2025</td>
                 <td class="player_hometown">Bridgewater, NJ</td>
               </tr>
