--- a/coach.html
+++ b/coach.html
@@ -33,14 +33,13 @@
           "
         >
           <h4 style="color: #041e42; text-align: center; padding-top: 4px">
-            Next Match - MARC Semifinals
+            Next Match - NCR Play-In
           </h4>
-          <p>Nov 2 2024</p>
-          <p>865 Centerville Rd, Lancaster, PA 17691</p>
+          <p>Nov 16</p>
         </div>
         <div></div>
         <div class="opponent-card">
-          <img src="images/nova_logo.svg" id="opp-logo" />
+          <img src="images/unh.png" id="opp-logo" />
         </div>
       </div>
     </div>
