--- a/shop.html
+++ b/shop.html
@@ -36,13 +36,13 @@
           "
         >
           <h4 style="color: #041e42; text-align: center; padding-top: 4px">
-            Next Match - NCR Play-In
+            Next Match - NCR Round of 16
           </h4>
-          <p>Nov 16</p>
+          <p>1:00pm - Nov 22 - Fairfield University</p>
         </div>
         <div></div>
         <div class="opponent-card">
-          <img src="images/unh.png" id="opp-logo" />
+          <img src="images/rpi_logo.png" id="opp-logo" />
         </div>
       </div>
     </div>
