duplicate rosters fixed

--- a/rosterNew.html
+++ b/rosterNew.html
@@ -97,8 +97,7 @@
           <li><a href="#" onclick="PosSort()">Position</a></li>
         </div>
       </div>
-      <div id="player__list" class="roster__container">
-      </div>
+      <div id="player__list" class="roster__container"></div>
     </main>
     <!--Footer-->
     <section>
@@ -144,6 +143,6 @@
         </div>
       </div>
     </section>
-    <script src="roster.js"></script>
+    <script src="rosterNew.js"></script>
   </body>
 </html>
